--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,11 @@ a:hover {
 }
 
 body {
+  -webkit-text-size-adjust: none;
   min-height: 100%;
   background-repeat: no-repeat;
   font-family: 'Open Sans', sans-serif;
-  background: linear-gradient(to left bottom, #5BA183 -70%,#EBE184 90%);
+  background: linear-gradient(to left bottom, #5BA183 -70%, #F8FFFF 90%);
   background-attachment: fixed;
 }
 
@@ -48,7 +49,6 @@ body {
 .main {
   position: absolute;
   padding-top: 60px;
-  left: 300px;
   top: 0;
   right: 0;
   bottom: 0;
@@ -76,7 +76,8 @@ body {
 }
 
 .side-bar {
-  overflow-y: scroll;
+  overflow-y: auto;
+	-webkit-overflow-scrolling:touch;
   background-color: #ffffff;
   border-right: 1px solid rgba(56,133,100,0.6);
   position: fixed;
@@ -91,12 +92,12 @@ body {
 }
 
 .sidebar-toggle, .sidebar-toggle:active {
-  background-color: hsla(0,0%,100%,.8);
-  z-index: 10;
+  /* background-color: hsla(0,0%,100%,.8); */
+  z-index: 15;
   outline: none;
   position:fixed;
   bottom: 0px;
-  width: 300px;
+  width: 38px;
   padding: 0;
   margin: 0;
   transition: ease-out .3s;
@@ -165,19 +166,16 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 }
 
 .search {
-  margin-bottom: 20px;
-  padding: 6px;
-  border-bottom: 1px solid #eee;
+    margin: 10px 10px 20px 10px;
+    border-bottom: 1px solid rgba(56,133,100,0.4);
 }
 
 aside>div>ul {
   margin-bottom: 40px;
 }
 .cont {
-  color: #fff;
-  background-color: #4e4e4e;
+  color: #000;
   margin: 20px;
-  padding: 20px;
 }
 
 .App-header {
@@ -202,4 +200,33 @@ aside>div>ul {
   to {
     transform: rotate(360deg);
   }
+}
+
+
+@media screen and (min-width:768px) {
+  body .main {
+    left: 0px;
+  }
+
+  body.show .main {
+    left: 300px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .side-bar {
+    left: -301px;
+  }
+
+  body.show .side-bar {
+    transform: translateX(301px);
+  }
+
+  body.show .main {
+    transform: translateX(300px);
+  }
+}
+
+.show {
+
 }
