--- a/src/components/SideMenu/SideMenu.module.css
+++ b/src/components/SideMenu/SideMenu.module.css
@@ -59,7 +59,10 @@
 }
 
 aside ul {
-    margin-bottom: 40px;
+    margin-inline-start: 10px;
+    list-style: none;
+    margin-bottom: 20px;
+    padding-inline-start: 15px;
   }
 
   @media screen and (min-width:768px) {
@@ -89,4 +92,11 @@ aside ul {
 
   .dropdownSettings {
     display: none;
+    list-style: none;
+  }
+
+  .dropdownSettings li ::before{
+    content: "-";
+    padding-right: 4px;
+    float: left;
   }
