--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -27,8 +27,10 @@
 }
 
 .ava {
-    margin-top: 2.5px;
-    border-radius: 45px;
-    width: 45px;
-    opacity: 0.1;
+    margin-top: 5px;
+    margin-right: 5px;
+    border-radius: 40px;
+    width: 40px;
+    opacity: 1;
+
 }
