--- a/src/components/SideMenu/SideMenu.module.css
+++ b/src/components/SideMenu/SideMenu.module.css
@@ -38,6 +38,10 @@
     text-align: center;
   }
 
+  .dropdownChats:focus, .dropdownChats div:focus {
+    outline: none
+  }
+
   .dropdownChats div {
     width: inherit;
   }
