--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,10 +1,17 @@
+.bananaWrapper {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to left bottom, rgb(120, 0, 156) -70%, #F8FFFF 100%)
+}
+
 .bananaContainer {
     display: flex;
+    height: 100vh;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: stretch;
-    transform: translateY(-120px);
+    /* height: stretch; */
+    transform: translateY(0);
     transition: 0s;
 }
 
@@ -13,5 +20,6 @@
 }
 
 .authButton {
+    width: fit-content;
     text-align: center;
 }
