--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,7 @@
     margin: 0;
     width: 100%;
     height: 50px;
-    background-color: aliceblue;
+    background-color: rgb(245, 245, 245);
 }
 
 .logo {
